# libvssdag

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  build.sh  install_prereq.sh  rebuild.sh
.github/workflows/: ci.yml
cmake/: vssdagConfig.cmake.in
docs/: VSS_4.0_NOTES.md
examples/: .gitignore  CMakeLists.txt  invalid_signal_handling.yaml
examples/battery_management/: README.md  battery_cells_mapping.yaml  battery_types.vspec  run_battery_simulation.sh  simulate_battery_cells.sh
examples/battery_simulation/: BatterySimulation.dbc  battery_cells_mapping.yaml  battery_types_vss4.vspec  run_battery_simulation.sh
examples/can_transformer/: CMakeLists.txt  main.cpp
examples/tesla_model3/: model3_mappings_dag.yaml
examples/tesla_simulation/: model3_mappings_dag.yaml  run_can_replay.sh  run_can_to_vss_dag.sh  run_transforer.sh
include/: can_reader.h  dbc_parser.h  lua_mapper.h  signal_mapper.h  signal_processor_dag.h  vss_formatter.h  vss_types.h
include/libVSSDAG/: signal_dag.h  signal_mapper.h  signal_mapping_types.h  signal_processor_dag.h  signal_source.h  signal_source_info.h  vss_struct_mapper.h  vss_types.h
include/libVSSDAG/can/: can_signal_source.h  dbc_parser.h  dbc_types.h
include/vssdag/: lua_mapper.h  mapping_types.h  signal_dag.h  signal_processor.h  signal_source.h  signal_source_info.h  vss_formatter.h  vss_struct_mapper.h  vss_types.h
include/vssdag/can/: can_reader.h  can_source.h  dbc_parser.h  dbc_types.h
programs/: CMakeLists.txt  main_yaml_dag.cpp
programs/can_transformer/: CMakeLists.txt  can_transformer.cpp
src/: can_reader.cpp  dbc_parser.cpp  lua_mapper.cpp  signal_dag.cpp  signal_mapper.cpp  signal_processor.cpp  signal_processor_dag.cpp  vss_formatter.cpp  vss_struct_mapper.cpp  vss_types.cpp
src/can/: can_reader.cpp  can_signal_source.cpp  can_source.cpp  dbc_parser.cpp
tests/: CMakeLists.txt  TEST_STRATEGY.md
tests/integration/: CMakeLists.txt  test_can_replay.cpp  test_end_to_end.cpp
tests/unit/: CMakeLists.txt  test_dbc_parser.cpp  test_lua_mapper.cpp  test_lua_mapper_simple.cpp  test_signal_dag.cpp  test_signal_processor.cpp  test_vss_types.cpp
